# mac-cleanup-py

./: .coveragerc  .flake8  .gitignore  .mypy.ini  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  bumpVersion  bumpVersion.sh  install  mac-cleanup  mac-cleanup.py  module_template.py  pyproject.toml  pytest.ini  requirements.txt  requirements_dev.txt  tox.ini
.github/: FUNDING.yml  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  questions.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: codeql.yml  greetings.yml  pypi_build.yml  pypi_test_build  stale.yml  tox.yml
mac_cleanup/: __init__.py  __main__.py  __version__.py  cli.py  collector.py  config.py  config_utils.py  console.py  core.py  core_modules.py  default_modules.py  error_handling.py  main.py  modules.py  modules.toml  parser.py  progress.py  utils.py
tests/: conftest.py  test_config.py  test_core.py  test_core_modules.py  test_error_handling.py  test_main.py  test_parser.py  test_progress.py  test_utils.py
