[tool.poetry]
name = "mac_cleanup"
version = "3.0.0"
description = "Python cleanup script for macOS"
license = "Apache-2.0"
authors = [ "Drugsosos" ]
readme = "README.md"
homepage = "https://github.com/mac-cleanup/mac-cleanup-py"
repository = "https://github.com/mac-cleanup/mac-cleanup-py"
keywords = [
    "macos",
    "script",
    "cleanup",
    "cleaner"
]
classifiers = [
    "Environment :: Console",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11"
]

include = [ "LICENSE" ]
exclude = [ "mac_cleanup/__main__.py", "mac_cleanup/py.typed" ]

[tool.poetry.urls]
"Documentation" = "https://github.com/mac-cleanup/mac-cleanup-py#install-automatically"
"Issue Tracker" = "https://github.com/mac-cleanup/mac-cleanup-py/issues"


[tool.poetry.dependencies]
python = ">=3.10,<3.12"
rich = "^13.3.3"
attrs = "^22.2.0"
inquirer = "^2.10.0"
toml = "^0.10.2"
beartype = "^0.12.0"

[tool.poetry.scripts]
mac-cleanup = "mac_cleanup:main"

[tool.poetry.group.dev.dependencies]
tox = "^4.4.7"
pytest = "^7.2.2"
pytest-cov = "^4.0.0"
pyright = "^1.1.300"
ruff = "^0.0.259"
py = "^1.11.0"

[build-system]
requires = [ "poetry-core>=1.0.0" ]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
omit = [
    "mac_cleanup/__main__.py",
    "mac_cleanup/default_modules.py"
]

[tool.coverage.report]
show_missing = true

[tool.pyright]
pythonVersion = "3.10"
pythonPlatform = "Darwin"
typeCheckingMode = "strict"
reportPrivateUsage = false
reportIncompatibleMethodOverride = false
reportImportCycles = false

[tool.ruff]
target-version = "py310"
line-length = 120
ignore = [
    "F403",  # star imports
    "F405",  #  probably undefined stuff from star imports
    "E731"  # lambda expressions
]

[tool.pytest.ini_options]
minversion = "7.2.2"
addopts = "--cov=mac_cleanup"
testpaths = [ "tests" ]
